feat(swagger): full swagger documentation along with refactor
